fixed bug that adds unwanted white space on location detail page

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -132,5 +132,6 @@ background-color: transparent;
 }
 
 .locationList {
-	padding-top: 50px;
+	padding-top: 0;
+	// padding-top: 50px;
 }
